--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>S&J Architects</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
 	<!--[if IE]>
@@ -11,17 +11,22 @@
 </head>
 
 <body>
-
-	<h1>You got this!  Good luck.</h1>
-
-<!-- Menu Content 
-S&J
-
-Home
-Services
-Contact
--->
-
+	<header>
+		<h1>S&J</h1>
+			<nav>
+				<a href="#" class="nav-link">Home</a>
+				<a href="#" class="nav-link">Services</a>
+				<a href="#" class="nav-link">Contact</a>
+			</nav>
+		</header>
+<div class="intro">
+	<div class="intro-content">
+		<h2>Integrity, <br>
+			Excellence, <br>
+			Progress. <br>
+		</h2>
+	</div>
+</div>
 
 <!-- Home Page Content:
 	
