--- a/index.html
+++ b/index.html
@@ -12,90 +12,105 @@
 
 <body>
 	<header>
-		<h1>S&J</h1>
-			<nav>
-				<a href="#" class="nav-link">Home</a>
-				<a href="#" class="nav-link">Services</a>
-				<a href="#" class="nav-link">Contact</a>
-			</nav>
-		</header>
-<div class="intro">
-	<div class="intro-content">
-		<h2>Integrity, <br>
-			Excellence, <br>
-			Progress. <br>
-		</h2>
+		<p>S&J</p>
+		<img src="./img/nav-hamburger.png" alt="nav" class="logo">
+	</header>
+	<!-- intro -->
+	<div class="intro">
+		<div class="intro-content">
+			<h1>Integrity, <br>
+				Excellence, <br>
+				Progress. <br>
+			</h1>
+		</div>
 	</div>
-</div>
-
-<!-- Home Page Content:
+			<!-- learn more -->
+			<div class="learn-top">
+				<div class="content">
+					<h3>Smith & Jones Architects</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit voluptates doloribus autem delectus fugit veritatis enim voluptatem quos a iure.</p>
+					<button>Learn More</button>
+				</div>
+				<!-- bottom -->
+				<div class="image">
+					<img src="./img/home/home-img-1.png" alt="">
+				</div>
+			</div>
+			
+			<!-- Home Page Content:
+				
+			Integrity,
+			Excellence,
+			Progress.
+			
+			Smith & Jones Architects
+			
+			Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
+			
+			Learn More
+			
+			Futuristic Designs
+			
+			Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
+			
+			View Designs
+			
+			Recent Projects
+			
+			THE VILLAS
+			
+			The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+			
+			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+			
+			OUTSKIRTS
+			
+			The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+			
+			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+			
+			THE BLOCKS
+			
+			The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+			
+			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+			
+			-->
+			
+			<!-- FOOTER CONTENT
+			Interested in starting a project?  
+			Let’s talk:
+			
+			Enter email
+			
+			We'll never share your email with anyone else.
+			
+			New York
+			123 Lane
+			Suite 100
+			Albany, NY 12345
+			202 555 0144
+			
+			Florida
+			Ocean Drive
+			Suite 201
+			Orlando, FL 22345
+			502 555 0144
+			
+			California
+			Mountain Street
+			Suite 105
+			San Diego, CA 22345
+			702 555 0144
+			
+			
+			So many flows man they out of control,
+			i got hoes slipping out of they clothes,
+			
+			
+			Copyright © 2018 Smith and Jones
+			-->
+				<script src="js/index.js"></script>
 	
-Integrity,
-Excellence,
-Progress.
-
-Smith & Jones Architects
-
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-
-Learn More
-
-Futuristic Designs
-
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-
-View Designs
-
-Recent Projects
-
-THE VILLAS
-
-The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
-OUTSKIRTS
-
-The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
-THE BLOCKS
-
-The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
--->
-
-<!-- FOOTER CONTENT
-Interested in starting a project?  
-Let’s talk:
-
-Enter email
-
-We'll never share your email with anyone else.
-
-New York
-123 Lane
-Suite 100
-Albany, NY 12345
-202 555 0144
-
-Florida
-Ocean Drive
-Suite 201
-Orlando, FL 22345
-502 555 0144
-
-California
-Mountain Street
-Suite 105
-San Diego, CA 22345
-702 555 0144
-
-Copyright © 2018 Smith and Jones
--->
-	<script src="js/index.js"></script>
 </body>
 </html>
