--- a/index.html
+++ b/index.html
@@ -26,16 +26,29 @@
 	</div>
 			<!-- learn more -->
 			<div class="learn-top">
-				<div class="content">
+				<div class="top-content">
 					<h3>Smith & Jones Architects</h3>
 					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit voluptates doloribus autem delectus fugit veritatis enim voluptatem quos a iure.</p>
 					<button>Learn More</button>
 				</div>
-				<!-- bottom -->
+				<!-- image -->
 				<div class="image">
 					<img src="./img/home/home-img-1.png" alt="">
 				</div>
 			</div>
+
+			<!-- learn more bottom -->
+			<div class="learn-bottom">
+					<div class="bottom-content">
+						<h3>Smith & Jones Architects</h3>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit voluptates doloribus autem delectus fugit veritatis enim voluptatem quos a iure.</p>
+						<button>Learn More</button>
+					</div>
+					<div class="bottom-image">
+						<img src="./img/home/home-img-2.png" alt="">
+					</div>
+					<!-- bottom -->
+				</div>
 			
 			<!-- Home Page Content:
 				
