--- a/index.html
+++ b/index.html
@@ -1,80 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>S&J Architects</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/index.css">
-	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>S&J Architects</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+            rel="stylesheet">
+        <link rel="stylesheet" href="css/index.css">
+        <!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+    </head>
 
-<body>
-	<header>
-		<p>S&J</p>
-		<img src="./img/nav-hamburger.png" alt="nav" class="logo">
-	</header>
-	<!-- intro -->
-	<div class="intro">
-		<div class="intro-content">
-			<h1>Integrity, <br>
-				Excellence, <br>
-				Progress. <br>
-			</h1>
-		</div>
-	</div>
-			<!-- learn more -->
-			<div class="learn-top">
-				<div class="top-content">
-					<h3>Smith & Jones Architects</h3>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit voluptates doloribus autem delectus fugit veritatis enim voluptatem quos a iure.</p>
-					<button>Learn More</button>
-				</div>
-				<!-- image -->
-				<div class="image">
-					<img src="./img/home/home-img-1.png" alt="">
-				</div>
-			</div>
+    <body>
+        <header>
+            <p>S&J</p>
+            <img src="./img/nav-hamburger.png" alt="nav" class="logo">
+        </header>
+        <!-- intro -->
+        <div class="intro">
+            <div class="intro-content">
+                <h1>Integrity,
+                    <br>
+                    Excellence,
+                    <br>
+                    Progress.
+                    <br>
+                </h1>
+            </div>
+        </div>
+        <!-- learn more -->
+        <div class="learn-top">
+            <div class="top-content">
+                <h3>Smith & Jones Architects</h3>
+                <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
+                    ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
+                    no errem.</p>
+                <button>Learn More</button>
+            </div>
+            <!-- image -->
+            <div class="image">
+                <img src="./img/home/home-img-1.png" alt="">
+            </div>
+        </div>
 
-			<!-- learn more bottom -->
-			<div class="learn-bottom">
-					<div class="bottom-content">
-						<h3>Smith & Jones Architects</h3>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit voluptates doloribus autem delectus fugit veritatis enim voluptatem quos a iure.</p>
-						<button>Learn More</button>
-					</div>
-					<div class="bottom-image">
-						<img src="./img/home/home-img-2.png" alt="">
-					</div>
-					<!-- bottom -->
-				</div>
+        <!-- learn more bottom -->
+        <div class="learn-bottom">
+            <div class="bottom-content">
+                <h3>Futuristic Designs</h3>
+                <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
+                    ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
+                    no errem.</p>
+                <button>View Designs</button>
+            </div>
+            <div class="bottom-image">
+                <img src="./img/home/home-img-2.png" alt="">
+            </div>
+        </div>
+
+        <div class="recent-projects">
+            <h2>Recent Projects</h2>
+            <!-- Villas Project -->
+            <div class="villas">
+                <div class="square">
+                    <p>T H E V I L L A S</p>
+                </div>
+            </div>
+
+            <div class="villa-description">
+                <p>
+                    The Villas bring to the table win-win survival strategies to ensure proactive
+                    domination. At the end of the day, going forward, a new normal that has evolved
+                    from generation X is on the runway heading towards a streamlined cloud solution.
+                </p>
+                <br>
+                <p>
+                    Capitalize on low hanging fruit to identify a ballpark value added activity to
+                    beta test. Override the digital divide with additional clickthroughs from
+                    DevOps. Nanotechnology immersion along the information highway will close the
+                    loop on focusing solely on the bottom line.
+                </p>
+
+            </div>
+            <!-- End of Villas -->
+            <!-- Outskirts Project -->
+            <div class="outskirts">
+                <div class="square">
+                    <p>O U T S K I R T S</p>
+                </div>
+            </div>
+
+            <div class="outskirts-description">
+                <p>
+                    The Villas bring to the table win-win survival strategies to ensure proactive
+                    domination. At the end of the day, going forward, a new normal that has evolved
+                    from generation X is on the runway heading towards a streamlined cloud solution.
+                </p>
+                <br>
+                <p>
+                    Capitalize on low hanging fruit to identify a ballpark value added activity to
+                    beta test. Override the digital divide with additional clickthroughs from
+                    DevOps. Nanotechnology immersion along the information highway will close the
+                    loop on focusing solely on the bottom line.
+                </p>
+
+            </div>
+            <!-- End of Outskirts -->
+            <!-- The Blocks -->
+            <div class="blocks">
+                <div class="square">
+                    <p>O U T S K I R T S</p>
+                </div>
+            </div>
+
+            <div class="blocks-description">
+                <p>
+                    The Villas bring to the table win-win survival strategies to ensure proactive
+                    domination. At the end of the day, going forward, a new normal that has evolved
+                    from generation X is on the runway heading towards a streamlined cloud solution.
+                </p>
+                <br>
+                <p>
+                    Capitalize on low hanging fruit to identify a ballpark value added activity to
+                    beta test. Override the digital divide with additional clickthroughs from
+                    DevOps. Nanotechnology immersion along the information highway will close the
+                    loop on focusing solely on the bottom line.
+                </p>
+
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <!-- Home Page Content:
+	
 			
-			<!-- Home Page Content:
-				
-			Integrity,
-			Excellence,
-			Progress.
 			
-			Smith & Jones Architects
-			
-			Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-			
-			Learn More
-			
-			Futuristic Designs
-			
-			Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-			
-			View Designs
-			
-			Recent Projects
-			
-			THE VILLAS
-			
-			The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-			
-			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
 			
 			OUTSKIRTS
 			
@@ -89,8 +153,8 @@
 			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
 			
 			-->
-			
-			<!-- FOOTER CONTENT
+
+        <!-- FOOTER CONTENT
 			Interested in starting a project?  
 			Let’s talk:
 			
@@ -117,13 +181,11 @@
 			702 555 0144
 			
 			
-			So many flows man they out of control,
-			i got hoes slipping out of they clothes,
 			
 			
 			Copyright © 2018 Smith and Jones
 			-->
-				<script src="js/index.js"></script>
-	
-</body>
+        <script src="js/index.js"></script>
+
+    </body>
 </html>
