--- a/index.html
+++ b/index.html
@@ -11,180 +11,183 @@
     </head>
 
     <body>
-        <header>
-            <p>S&J</p>
-            <img src="./img/nav-hamburger.png" alt="nav" class="logo">
-        </header>
-        <!-- intro -->
-        <div class="intro">
-            <div class="intro-content">
-                <h1>Integrity,
-                    <br>
-                    Excellence,
-                    <br>
-                    Progress.
-                    <br>
-                </h1>
-            </div>
-        </div>
-        <!-- learn more -->
-        <div class="learn-top">
-            <div class="top-content">
-                <h3>Smith & Jones Architects</h3>
-                <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
-                    ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
-                    no errem.</p>
-                <button>Learn More</button>
-            </div>
-            <!-- image -->
-            <div class="image">
-                <img src="./img/home/home-img-1.png" alt="">
-            </div>
-        </div>
+        <div class="home">
+            <header class="nav nav--expand">
+                <h2>S&J</h2>
 
-        <!-- learn more bottom -->
-        <div class="learn-bottom">
-            <div class="bottom-content">
-                <h3>Futuristic Designs</h3>
-                <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
-                    ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
-                    no errem.</p>
-                <button>View Designs</button>
-            </div>
-            <div class="bottom-image">
-                <img src="./img/home/home-img-2.png" alt="">
-            </div>
-        </div>
+                <div class="nav-btn"></div>
 
-        <div class="recent-projects">
-            <h2>Recent Projects</h2>
-            <!-- Villas Project -->
-            <div class="villas">
-                <div class="square">
-                    <p>T H E V I L L A S</p>
+                <nav>
+                    <a href="#" class="href">Home</a>
+                    <a href="#" class="href">Services</a>
+                    <a href="#" class="href">Contact</a>
+                </nav>
+            </header>
+            <!-- Intro Text -->
+            <section class="intro">
+                <div class="intro-text">
+                    <h1>Integrity,
+                        <br>
+                        Excellence,
+                        <br>
+                        Progress.
+                    </h1>
                 </div>
-            </div>
+            </section>
 
-            <div class="villa-description">
-                <p>
-                    The Villas bring to the table win-win survival strategies to ensure proactive
-                    domination. At the end of the day, going forward, a new normal that has evolved
-                    from generation X is on the runway heading towards a streamlined cloud solution.
-                </p>
-                <br>
-                <p>
-                    Capitalize on low hanging fruit to identify a ballpark value added activity to
-                    beta test. Override the digital divide with additional clickthroughs from
-                    DevOps. Nanotechnology immersion along the information highway will close the
-                    loop on focusing solely on the bottom line.
-                </p>
-
-            </div>
-            <!-- End of Villas -->
-            <!-- Outskirts Project -->
-            <div class="outskirts">
-                <div class="square">
-                    <p>O U T S K I R T S</p>
+            <!-- Learn about S&J -->
+            <section class="learn--top">
+                <div class="top--content">
+                    <h3>Smith & Jones Architects</h3>
+                    <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
+                        ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
+                        no errem.</p>
+                    <button>Learn More</button>
                 </div>
-            </div>
+				<!-- Image -->
+				<div class="top--image">
+					<img src="./img//home/home-img-1.png" alt="home">
+				</div>
+            </section>
 
-            <div class="outskirts-description">
-                <p>
-                    The Villas bring to the table win-win survival strategies to ensure proactive
-                    domination. At the end of the day, going forward, a new normal that has evolved
-                    from generation X is on the runway heading towards a streamlined cloud solution.
-                </p>
-                <br>
-                <p>
-                    Capitalize on low hanging fruit to identify a ballpark value added activity to
-                    beta test. Override the digital divide with additional clickthroughs from
-                    DevOps. Nanotechnology immersion along the information highway will close the
-                    loop on focusing solely on the bottom line.
-                </p>
-
-            </div>
-            <!-- End of Outskirts -->
-            <!-- The Blocks -->
-            <div class="blocks">
-                <div class="square">
-                    <p>O U T S K I R T S</p>
+            <section class="learn--bottom">
+				<div class="bottom--image">
+					<img src="./img/home/home-img-2.png" alt="home">
+				</div>
+                <div class="bottom--content">
+                    <h3>Futuristic Designs</h3>
+                    <p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit
+                        ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec
+                        no errem</p>
+                    <button>View Designs</button>
                 </div>
-            </div>
+            </section>
 
-            <div class="blocks-description">
-                <p>
-                    The Villas bring to the table win-win survival strategies to ensure proactive
-                    domination. At the end of the day, going forward, a new normal that has evolved
-                    from generation X is on the runway heading towards a streamlined cloud solution.
-                </p>
-                <br>
-                <p>
-                    Capitalize on low hanging fruit to identify a ballpark value added activity to
-                    beta test. Override the digital divide with additional clickthroughs from
-                    DevOps. Nanotechnology immersion along the information highway will close the
-                    loop on focusing solely on the bottom line.
-                </p>
+            <!-- Recent Projects -->
+            <!-- Project 1 - Villas -->
+            <section class="villas">
+                <h2>Recent Projects</h2>
+                <div class="project-img">
+                    <div class="project-name">
+                        <h3>THE VILLAS</h3>
+                    </div>
+                </div>
 
-            </div>
+                <div class="project-text">
+                    <p>The Villas bring to the table win-win survival strategies to ensure proactive
+                        domination. At the end of the day, going forward, a new normal that has evolved
+                        from generation X is on the runway heading towards a streamlined cloud solution.
+                    </p>
+					<br>
+                    <p>Capitalize on low hanging fruit to identify a ballpark value added activity
+                        to beta test. Override the digital divide with additional clickthroughs from
+                        DevOps. Nanotechnology immersion along the information highway will close the
+                        loop on focusing solely on the bottom line.</p>
+                </div>
+            </section>
+
+            <!-- Project 2 - Outskirts -->
+            <section class="outskirts">
+                <div class="project-img">
+                    <div class="project-name">
+                        <h3>OUTSKIRTS</h3>
+                    </div>
+                </div>
+
+                <div class="project-text">
+                    <p>The Outskirts are amazing to the table win-win survival strategies to ensure
+                        proactive domination. At the end of the day, going forward, a new normal that
+                        has evolved from generation X is on the runway heading towards a streamlined
+                        cloud solution.
+                    </p>
+					<br>
+                    <p>Capitalize on low hanging fruit to identify a ballpark value added activity
+                        to beta test. Override the digital divide with additional clickthroughs from
+                        DevOps. Nanotechnology immersion along the information highway will close the
+                        loop on focusing solely on the bottom line.</p>
+                </div>
+            </section>
+
+            <!-- Project 2 - The Blocks -->
+            <section class="blocks">
+                <div class="project-img">
+                    <div class="project-name">
+                        <h3>THE BLOCKS</h3>
+                    </div>
+                </div>
+
+                <div class="project-text">
+                    <p>The Blocks are amazing to the table win-win survival strategies to ensure
+                        proactive domination. At the end of the day, going forward, a new normal that
+                        has evolved from generation X is on the runway heading towards a streamlined
+                        cloud solution.
+                    </p>
+					<br>
+                    <p>Capitalize on low hanging fruit to identify a ballpark value added activity
+                        to beta test. Override the digital divide with additional clickthroughs from
+                        DevOps. Nanotechnology immersion along the information highway will close the
+                        loop on focusing solely on the bottom line.</p>
+                </div>
+			</section>
+			
+			
+
+            <!-- Footer -->
+            <footer>
+                <div class="footer">
+                    <div class="footer--contact">
+						<h4>Interested in starting a project?</h4>
+						<br>
+						<h4>Let's talk:</h4>
+						<br>
+                        <input type="email" placeholder="johndoe@example.com">
+                        <p>We'll never share your email with anyone else.</p>
+                    </div>
+                    <!-- Addresses -->
+                    <!-- New York -->
+                    <div class="addresses">
+                        <address>
+							<h4>New York</h4>
+							<br>
+                            <p>123 Lane</p>
+							<br>
+							<p>Suite 100</p>
+							<br>
+							<p>Albany, NY 12345</p>
+							<br>
+							<p>202 555 0144</p>
+                        </address>
+                        <!-- Florida -->
+                        <address>
+							<h4>Florida</h4>
+							<br>							
+                            <p>Ocean Drive</p>
+							<br>							
+							<p>Suite 201</p>
+							<br>							
+							<p>Orlando, FL 22345</p>
+							<br>							
+							<p>502 555 0144</p>
+                        </address>
+                        <!-- California -->
+                        <address>
+							<h4>California</h4>
+							<br>							
+                            <p>Mountain Street</p>
+							<br>							
+							<p>Suite 105</p>
+							<br>							
+							<p>San Diego, CA 22345</p>
+							<br>							
+							<p>702 555 0144</p>
+                        </address>
+                    </div>
+				</div>
+				
+				<copyright>Copyright © 2018 Smith and Jones</copyright>
+            </footer>
         </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <!-- Home Page Content:
-	
-			
-			
-			
-			OUTSKIRTS
-			
-			The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-			
-			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-			
-			THE BLOCKS
-			
-			The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-			
-			Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-			
-			-->
-
-        <!-- FOOTER CONTENT
-			Interested in starting a project?  
-			Let’s talk:
-			
-			Enter email
-			
-			We'll never share your email with anyone else.
-			
-			New York
-			123 Lane
-			Suite 100
-			Albany, NY 12345
-			202 555 0144
-			
-			Florida
-			Ocean Drive
-			Suite 201
-			Orlando, FL 22345
-			502 555 0144
-			
-			California
-			Mountain Street
-			Suite 105
-			San Diego, CA 22345
-			702 555 0144
-			
-			
-			
-			
-			Copyright © 2018 Smith and Jones
-			-->
         <script src="js/index.js"></script>
 
     </body>
