--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
             href="https://fonts.googleapis.com/css?family=Roboto:400,700"
             rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
     </head>
 
     <body>
         <div class="home">
             <header class="nav nav--expand">
-                <h2>S&J</h2>
+                <h2><a href="#">S&J</a></h2>
 
                 <div class="nav-btn"></div>
 
