services page finished

--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
             <!-- buttons -->
             <section class="button-container">
                 <button class="services--btn">Pre-Construction</button>
-                <button class="services--btn">Construction</button>
+                <button class="services--btn btn-active">Construction</button>
                 <button class="services--btn">Design Build</button>
                 <button class="services--btn">Sustainability</button>
             </section>
