--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 
     <body>
         <div class="services">
-            <header class="nav nav--expand">
+            <header class="nav">
                 <h2>
                     <a href="#">S&J</a>
                 </h2>
