--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <img src="img/nav-hamburger.png" alt="dropdown" class="nav-button">
                     <img src="img/nav-hamburger-close.png" alt="dropdown" class="nav-hidden close">
                     <div class="nav-content nav-hidden">
-                        <a href="#" class="nav-link">Home</a>
-                        <a href="#" class="nav-link">Services</a>
+                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="services.html" class="nav-link">Services</a>
                         <a href="#" class="nav-link">Contact</a>
                     </div>
                 </div>
