--- a/services.html
+++ b/services.html
@@ -19,160 +19,160 @@
                     <img src="img/nav-hamburger.png" alt="dropdown" class="nav-button">
                     <img src="img/nav-hamburger-close.png" alt="dropdown" class="nav-hidden close">
                     <div class="nav-content nav-hidden">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                         <a href="#" class="nav-link">Services</a>
                         <a href="#" class="nav-link">Contact</a>
                     </div>
                 </div>
             </nav>
         </header>
-            <!-- Intro Text -->
-            <section class="services--intro">
-                <div class="intro--text">
-                    <h1>Services</h1>
-                </div>
-            </section>
-
-            <!-- Learn about services -->
-            <div class="services--about">
-                <p>Services include: completely synergize resource taxing relationships via
-                    premier niche markets. Professionally cultivate one-to-one customer service with
-                    robust ideas. Dynamically innovate resource-leveling customer service for state
-                    of the art customer service.</p>
+        <!-- Intro Text -->
+        <section class="services--intro">
+            <div class="intro--text">
+                <h1>Services</h1>
             </div>
+        </section>
 
-            <!-- buttons -->
-            <section class="button-container">
-                <button class="services--btn" data-tab='1'>Pre-Construction</button>
-                <button class="services--btn btn-active" data-tab='2'>Construction</button>
-                <button class="services--btn" data-tab='3'>Design Build</button>
-                <button class="services--btn" data-tab='4'>Sustainability</button>
-            </section>
-
-            <!-- button content -->
-            <section class='services--container'>
-                <div class='services--card' data-tab='1'>
-                    <div class='services--text'>
-                        <h2>Pre-Construction</h2>
-                        <p>Completely synergize resource taxing relationships via premier niche markets.
-                            Professionally cultivate one-to-one customer service with robust ideas.
-                            Dynamically innovate resource-leveling customer service for state of the art
-                            customer service.</p>
-                        <br>
-                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
-                            Interactively coordinate proactive e-commerce via process-centric 'outside the
-                            box' thinking. Completely pursue scalable customer service through sustainable
-                            potentialities.</p>
-                    </div>
-                    <div class='content-img'><img src='./img/services/services-tab-pre-construction-img.png' alt=''></div>
-                </div>
-                <div class='services--card active--card' data-tab='2'>
-                    <div class='services--text'>
-                        <h2>Construction</h2>
-                        <p>Completely synergize resource taxing relationships via premier niche markets.
-                            Professionally cultivate one-to-one customer service with robust ideas.
-                            Dynamically innovate resource-leveling customer service for state of the art
-                            customer service.</p>
-                        <br>
-                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
-                            Interactively coordinate proactive e-commerce via process-centric 'outside the
-                            box' thinking. Completely pursue scalable customer service through sustainable
-                            potentialities.</p>
-                    </div>
-                    <div class='content-img'><img src='./img/services/services-tab-construction-img.png' alt=''></div>
-                </div>
-                <div class='services--card' data-tab='3'>
-                    <div class='services--text'>
-                        <h2>Design Build</h2>
-                        <p>Completely synergize resource taxing relationships via premier niche markets.
-                            Professionally cultivate one-to-one customer service with robust ideas.
-                            Dynamically innovate resource-leveling customer service for state of the art
-                            customer service.</p>
-                        <br>
-                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
-                            Interactively coordinate proactive e-commerce via process-centric 'outside the
-                            box' thinking. Completely pursue scalable customer service through sustainable
-                            potentialities.</p>
-                    </div>
-                    <div class='content-img'><img src='./img/services/services-tab-design-build-img.png' alt=''></div>
-                </div>
-                <div class='services--card' data-tab='4'>
-                    <div class='services--text'>
-                        <h2>Sustainability</h2>
-                        <p>Completely synergize resource taxing relationships via premier niche markets.
-                            Professionally cultivate one-to-one customer service with robust ideas.
-                            Dynamically innovate resource-leveling customer service for state of the art
-                            customer service.</p>
-                        <br>
-                        <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
-                            Interactively coordinate proactive e-commerce via process-centric 'outside the
-                            box' thinking. Completely pursue scalable customer service through sustainable
-                            potentialities.</p>
-                    </div>
-                    <div class='content-img'><img src='./img/services/services-tab-sustainability-img.png' alt=''></div>
-                </div>
-            </section>
+        <!-- Learn about services -->
+        <div class="services--about">
+            <p>Services include: completely synergize resource taxing relationships via
+                premier niche markets. Professionally cultivate one-to-one customer service with
+                robust ideas. Dynamically innovate resource-leveling customer service for state
+                of the art customer service.</p>
         </div>
 
-        <!-- Footer -->
-        <!-- Footer -->
-        <footer>
-            <div class="footer">
-                <div class="footer--contact">
-                    <h4>Interested in starting a project?</h4>
+        <!-- buttons -->
+        <section class="button-container">
+            <button class="services--btn btn-active" data-tab='1'>Pre-Construction</button>
+            <button class="services--btn" data-tab='2'>Construction</button>
+            <button class="services--btn" data-tab='3'>Design Build</button>
+            <button class="services--btn" data-tab='4'>Sustainability</button>
+        </section>
+
+        <!-- button content -->
+        <section class='services--container'>
+            <div class='services--card' data-tab='1'>
+                <div class='services--text active--card'>
+                    <h2>Pre-Construction</h2>
+                    <p>Completely synergize resource taxing relationships via premier niche markets.
+                        Professionally cultivate one-to-one customer service with robust ideas.
+                        Dynamically innovate resource-leveling customer service for state of the art
+                        customer service.</p>
                     <br>
-                    <h4>Let's talk:</h4>
-                    <br>
-                    <input type="email" placeholder="johndoe@example.com">
-                    <p>We'll never share your email with anyone else.</p>
+                    <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                        Interactively coordinate proactive e-commerce via process-centric 'outside the
+                        box' thinking. Completely pursue scalable customer service through sustainable
+                        potentialities.</p>
                 </div>
-                <!-- Addresses -->
-                <!-- New York -->
-                <div class="addresses">
-                    <address>
-                        <h4>New York</h4>
-                        <br>
-                        <p>123 Lane</p>
-                        <br>
-                        <p>Suite 100</p>
-                        <br>
-                        <p>Albany, NY 12345</p>
-                        <br>
-                        <p>202 555 0144</p>
-                    </address>
-                    <!-- Florida -->
-                    <address>
-                        <h4>Florida</h4>
-                        <br>
-                        <p>Ocean Drive</p>
-                        <br>
-                        <p>Suite 201</p>
-                        <br>
-                        <p>Orlando, FL 22345</p>
-                        <br>
-                        <p>502 555 0144</p>
-                    </address>
-                    <!-- California -->
-                    <address>
-                        <h4>California</h4>
-                        <br>
-                        <p>Mountain Street</p>
-                        <br>
-                        <p>Suite 105</p>
-                        <br>
-                        <p>San Diego, CA 22345</p>
-                        <br>
-                        <p>702 555 0144</p>
-                    </address>
-                </div>
+                <div class='content-img'><img src='./img/services/services-tab-pre-construction-img.png' alt=''></div>
             </div>
-
-            <copyright>Copyright © 2018 Smith and Jones</copyright>
-        </footer>
-
+            <div class='services--card' data-tab='2'>
+                <div class='services--text'>
+                    <h2>Construction</h2>
+                    <p>Completely synergize resource taxing relationships via premier niche markets.
+                        Professionally cultivate one-to-one customer service with robust ideas.
+                        Dynamically innovate resource-leveling customer service for state of the art
+                        customer service.</p>
+                    <br>
+                    <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                        Interactively coordinate proactive e-commerce via process-centric 'outside the
+                        box' thinking. Completely pursue scalable customer service through sustainable
+                        potentialities.</p>
+                </div>
+                <div class='content-img'><img src='./img/services/services-tab-construction-img.png' alt=''></div>
+            </div>
+            <div class='services--card' data-tab='3'>
+                <div class='services--text'>
+                    <h2>Design Build</h2>
+                    <p>Completely synergize resource taxing relationships via premier niche markets.
+                        Professionally cultivate one-to-one customer service with robust ideas.
+                        Dynamically innovate resource-leveling customer service for state of the art
+                        customer service.</p>
+                    <br>
+                    <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                        Interactively coordinate proactive e-commerce via process-centric 'outside the
+                        box' thinking. Completely pursue scalable customer service through sustainable
+                        potentialities.</p>
+                </div>
+                <div class='content-img'><img src='./img/services/services-tab-design-build-img.png' alt=''></div>
+            </div>
+            <div class='services--card' data-tab='4'>
+                <div class='services--text'>
+                    <h2>Sustainability</h2>
+                    <p>Completely synergize resource taxing relationships via premier niche markets.
+                        Professionally cultivate one-to-one customer service with robust ideas.
+                        Dynamically innovate resource-leveling customer service for state of the art
+                        customer service.</p>
+                    <br>
+                    <p>Phosflourescently engage worldwide methodologies with web-enabled technology.
+                        Interactively coordinate proactive e-commerce via process-centric 'outside the
+                        box' thinking. Completely pursue scalable customer service through sustainable
+                        potentialities.</p>
+                </div>
+                <div class='content-img'><img src='./img/services/services-tab-sustainability-img.png' alt=''></div>
+            </div>
+        </section>
     </div>
 
-    <script src="js/index.js"></script>
+    <!-- Footer -->
+    <!-- Footer -->
+    <footer>
+        <div class="footer">
+            <div class="footer--contact">
+                <h4>Interested in starting a project?</h4>
+                <br>
+                <h4>Let's talk:</h4>
+                <br>
+                <input type="email" placeholder="johndoe@example.com">
+                <p>We'll never share your email with anyone else.</p>
+            </div>
+            <!-- Addresses -->
+            <!-- New York -->
+            <div class="addresses">
+                <address>
+                    <h4>New York</h4>
+                    <br>
+                    <p>123 Lane</p>
+                    <br>
+                    <p>Suite 100</p>
+                    <br>
+                    <p>Albany, NY 12345</p>
+                    <br>
+                    <p>202 555 0144</p>
+                </address>
+                <!-- Florida -->
+                <address>
+                    <h4>Florida</h4>
+                    <br>
+                    <p>Ocean Drive</p>
+                    <br>
+                    <p>Suite 201</p>
+                    <br>
+                    <p>Orlando, FL 22345</p>
+                    <br>
+                    <p>502 555 0144</p>
+                </address>
+                <!-- California -->
+                <address>
+                    <h4>California</h4>
+                    <br>
+                    <p>Mountain Street</p>
+                    <br>
+                    <p>Suite 105</p>
+                    <br>
+                    <p>San Diego, CA 22345</p>
+                    <br>
+                    <p>702 555 0144</p>
+                </address>
+            </div>
+        </div>
+
+        <copyright>Copyright © 2018 Smith and Jones</copyright>
+    </footer>
+
+</div>
+
+<script src="js/index.js"></script>
 
 </body>
 </html>
